Changelog
=========

2019 12 19
----------

* BrachioGraph servo_1_zero/servo_2_zero attributes are now servo_1_centre/servo_2_centre
* Added arm_1_centre/arm_2_centre attributes to the BrachioGraph definition
* Added calibration methods and documentation
* Added bottom/top/left/right properties to BrachioGraph (bl, tl, tr, br)
* Created protractors for calibration


2019 12 26
----------

* Added hysteresis compensation with hysteresis_correction_1/hysteresis_correction_2 values
* Added calibration and anti-hysteresis documentation
* Added check for repeat controls in linedraw

2019 12 27
----------

* Added an exception for out-of-reach condition

2022 02 26
----------

* Renamed arm_1_centre, arm_2_centre to servo_1_parked_angle, servo_2_parked_angle
* Renamed servo_1_centre, servo_2_centre to servo_1_parked_pw, servo_2_parked_pw

2022 03 06
----------

* Added turtle graphics to BrachioGraph with turtle attribute
* Improved virtual mode; now runs when pigpio is unavailable
* Removed unnecessary draw() method
* Renamed INNER_ARM, OUTER_ARM to inner_arm, outer_arm
* Renamed virtual_mode to virtual